# python-fastapi

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: main.py
app/config/: database.py  db.py  settings.py
app/controllers/: todoController.py
app/models/: todoModel.py  user_model.py
app/routes/: user_routes.py
app/services/: todoService.py
config/: db.py  settings.py
routes/: user_routes.py
schemas/: user_schema.py
