[tool.poetry]
name = "python-fastapi-mongo"
version = "0.1.0"
description = "Python REST API with FastAPI and MongoDB"
authors = ["Francisco Briones"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.20.0"
fastapi = {extras = ["standard"], version = "^0.92.0"}
pymongo = "^4.3.3"
pydantic = {extras = ["dotenv"], version = "^1.10.5"}
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
